kops/test-asm-todel/mysql/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mysql-virtual-service
spec:
  hosts:
    - "35.239.250.140.nip.io"
  gateways:
    - mysql-gateway
  tcp:
    - route:
        - destination:
            port:
              number: 3306
            host: mysql.default.svc.cluster.local
